<resources>
    <string name="app_name">TestProject</string>
    <string name="select_file">Select File</string>
    <string name="upload_file_0_3">Upload Files 0/3</string>
    <string name="sms">SMS</string>
    <string name="voice">Voice</string>
    <string name="video">Video</string>
    <string name="poster">Poster</string>
    <string name="documents">Documents</string>
    <string name="update_successful">Update Successful</string>
    <string name="update">Update</string>
    <string name="farmar_name">Farmer Name</string>
    <string name="advisory">JNKVV Advisory</string>
    <string name="des_sir_msg_asset_file" translatable="false">DES_Sir_Message.pdf</string>
    <string name="vc_sir_msg_asset_file" translatable="false">VC_Sir_Message.pdf</string>
    <string name="des_sir_msg_asset_file_Eng" translatable="false">DES_Sir_Message.pdf</string>
    <string name="vc_sir_msg_asset_file_Eng" translatable="false">VC_Sir_Message.pdf</string>
    <string name="review_by">Review By</string>
    <string name="user_name_required">User Name Required.</string>
    <string name="user_name_available">User name available.</string>
    <string name="user_name_exits">User already registered.</string>
    <string name="valid_otp_required">enter valid otp.</string>
    <string name="valid_user_name">Valid User Name Required.</string>
    <string name="password_required">Password Required.</string>
    <string name="google_play_services">Google play services are not available.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="title_home">Farmer</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="exit">Do you want to exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="label_mobile">Mobile</string>
    <string name="hint_farmer_list_search">Search Name</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="name_required">Name Required</string>
    <string name="name_error">Enter name only alphabetical character.</string>
    <string name="fathername_error">Enter father name only alphabetical character.</string>
    <string name="father_name_required">Father Name Required.</string>
    <string name="dob_required">Date Of Birth Required.</string>
    <string name="gender_required">Gender Required</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_required">Date Of birth Required</string>
    <string name="query">Query</string>
    <string name="contentInfo">Info</string>
    <string name="organisation">Organisation</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="pincode">PinCode</string>
    <string name="alt_number">Alternate No</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search_user_event">Search By Name</string>
    <string name="projects">Projects :</string>
    <string name="content">Content </string>
    <string name="created">Created </string>
    <string name="create_sms">Create SMS </string>
    <string name="create_voice">Create Voice</string>
    <string name="create_video">Create Video</string>
    <string name="create_poster">Create Poster </string>
    <string name="create_doc">Create Doc</string>
    <string name="project">Project</string>
    <string name="subdomain">Sub domain</string>
    <string name="createdBy">Created By -</string>
    <string name="addofcreated">Addr. of Creator -</string>
    <string name="approved">Approved </string>
    <string name="published">Published </string>
    <string name="transplated">Translated </string>
    <string name="rejected">Rejected </string>
    <string name="CommonContent">Common Content</string>
    <string name="search_content">Search Content</string>
    <string name="knowlegdomain">knowledge Domain</string>
    <string name="search">Search </string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="bluetooth_not_supported">Bluetooth not supported!!</string>
    <string name="getting_all_bluetooth_devices">Getting all available Bluetooth Devices</string>
    <string name="printer_connecting">Connecting to</string>
    <string name="can_not_establish_connection">Cannot establish connection</string>
    <string name="date">Date :- </string>
    <string name="enter_query_title">Enter Title</string>
    <string name="title_add_query">Title*</string>
    <string name="finish">Finish</string>
    <string name="enter_email">Enter Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_online">Last Online</string>
    <string name="father_husband_name">Father/Husband Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="address">Address :</string>
    <string name="agri_expert_login">Agri Expert Login</string>
    <string name="registration_success">Registration Successful</string>
    <string name="query_added_success">Query Successfully Added</string>
    <string name="query_update_success">Query Successfully Updated</string>
    <string name="query_delete_success">Query Successfully Deleted</string>
    <string name="crop_added_success">Crop Successfully Added</string>
    <string name="livestock_added_success"> Successfully Added</string>
    <string name="livestock_update_success">LiveStock Successfully Updated</string>
    <string name="livestock_delete_success">LiveStock Successfully Deleted</string>
    <string name="no_data_found">No Data Found</string>
    <string name="loading">Data Loading please wait…</string>
    <string name="channel_name">NOTIFICATION_CHANNEL_NAME</string>
    <string name="channel_Id" translatable="false">1001</string>
    <string name="channel_description">NOTIFICATION_CHANNEL_DESC</string>
    <string name="notification">Notification</string>
    <string name="list">List</string>
    <string name="Date">Date</string>
    <string name="Sub_domain">Sub domain*</string>
    <string name="feedbackstar">Feedback*</string>
    <string name="Knowledge_domain">Knowledge domain*</string>
    <string name="timelessstar">Timeliness*</string>
    <string name="completenessstar">Completeness*</string>
    <string name="relevancestar">Relevance*</string>
    <string name="understablestar">Understandable*</string>
    <string name="enterfeedback">Enter Feedback</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="Next">Next</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Login">Login</string>
    <string name="Enter_your_Mobile_number">Enter Username/Mobile Number</string>
    <string name="enter_fullname">Enter Full Name</string>
    <string name="enter_fathername">Enter Father Name/Husband Name</string>
    <string name="enter_mobilenumber">Enter Mobile Number*</string>
    <string name="agree">I Agree To Share Data With N.I.C.E.</string>
    <string name="login">LOGIN</string>
    <string name="registeratn">Registration</string>
    <string name="selectlang">Select your language</string>
    <string name="myevent">My Event</string>
    <string name="aidlocation">AID Location</string>
    <string name="offline">Offline</string>
    <string name="currentweather">Current Weather</string>
    <string name="weatheralert">Weather Alert</string>
    <string name="version">Version 1.0</string>
    <string name="version_text">Version </string>
    <string name="totalfarmer">Total Farmer: </string>
    <string name="totalland">Total Land </string>
    <string name="vacentArea">Vacant Area</string>
    <string name="fullname">Full Name</string>
    <string name="fathername">Father Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="mobileno_exits">Mobile Number already registered</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="crops">Crops</string>
    <string name="cropcount">Crop Count</string>
    <string name="cultivatedarea">Cultivated Area</string>
    <string name="Livestock">Livestock</string>
    <string name="ratings">Ratings</string>
    <string name="feedback">Feedback</string>
    <string name="basicdetails">Basic Details</string>
    <string name="address1">Address-</string>
    <string name="commonname">Common Name</string>
    <string name="year">Year</string>
    <string name="season">Season</string>
    <string name="area">Area</string>
    <string name="addcrops">Add Crops</string>
    <string name="addlivestock">Add Livestock</string>
    <string name="yield">Yield</string>
    <string name="completedate">Completed Date</string>
    <string name="inputcost">Input Cost (In INR.)</string>
    <string name="yieldvalue">Yield Value (In INR.)</string>
    <string name="remark">Remarks</string>
    <string name="delete">Delete</string>
    <string name="enterquantity">Enter Quantity</string>
    <string name="variety">Variety</string>
    <string name="stage">Stage</string>
    <string name="quantity">Quantity</string>
    <string name="feedbacktype">Feedback Type</string>
    <string name="status">Status</string>
    <string name="assignedto">Assign To -</string>
    <string name="assignedby">Assigned By -</string>
    <string name="minago">Min ago</string>
    <string name="dayago">Days ago</string>
    <string name="next7days">Next 7 Days Record</string>
    <string name="scientificname">Scientific Name</string>
    <string name="intercrop">Inter Crop</string>
    <string name="area_acre">Area(acre)</string>
    <string name="irrigation">Irrigation</string>
    <string name="control">Controls</string>
    <string name="select_livestock">---Select LiveStock---</string>
    <string name="select_knowleadge">Select-knowledge-Domain</string>
    <string name="doyouwanttoapprovethiscontent">Do you want to approve this content</string>
    <string name="doyouwanttorejectthiscontent">Do you want to reject this content</string>
    <string name="doyouwanttodeletethiscontent">Do you want to delete this content</string>
    <string name="doyouwanttodeletethisquery">Do you want to delete this Query</string>
    <string name="doyouwanttoexit">Do you want to Exit ?</string>
    <string name="select_stage">---Select Stage---</string>
    <string name="successfulqueryupdate">Query Successfully Deleted</string>
    <string name="solutionby">Solution by -</string>
    <string name="distadmin">Dist Admin</string>
    <string name="doyouwanttodelete">Do You Want To Delete Crop</string>
    <string name="updateliveStock">Update LiveStock</string>
    <string name="tryaftersometime">Try after sometime</string>
    <string name="pleaseselectlivestock">Please Select Livestocks</string>
    <string name="pleaseselectvarieties">Please Select Varieties</string>
    <string name="pleaseselectstage">Please Select Stage</string>
    <string name="pleaseenterquantity">Please Enter Quantity</string>
    <string name="viewInYoutube">View In Youtube</string>
    <string name="Solution">Solution</string>
    <string name="video_not_open">If this video is not opened,</string>
    <string name="click_here">Click Here</string>
    <string name="myprofile">My Profile</string>
    <string name="commonquery">Common Query</string>
    <string name="farmars">Farmers</string>
    <string name="nice3">benefit can access the content developed, repurposed, and validated in the NICE system free of charge \n</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="choose_image">Choose Image</string>
    <string name="resolve">Resolve</string>
</resources>