<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group"
        android:checkableBehavior="single"

        >
        <item
            android:id="@+id/item"
            android:title=""
            />
    </group>

    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single"
        android:visible="false"
        >
        <item
            android:id="@+id/myprofile"
            android:icon="@drawable/imggreen"
            android:title="@string/myprofile"
            />
    </group>

    <group
        android:id="@+id/grp_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/commoncontent"
            android:title="@string/CommonContent"
            android:icon="@drawable/img_1"
            />
    </group>

    <group
        android:id="@+id/grp_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/commonquery"
            android:icon="@drawable/querygreen"
            android:title="@string/commonquery"/>

    </group>

    <group
        android:id="@+id/grp_4"
        android:checkableBehavior="single"
        android:visible="false"
        >
        <item
            android:id="@+id/notification"
            android:title="@string/notification"
            android:icon="@drawable/baseline_shoping_cart_24"
            />

    </group>

    <group
        android:id="@+id/grp_6"
        android:checkableBehavior="single"
        android:visible="false"
        >
        <item
            android:id="@+id/weather"
            android:title="Weather Forecast"
            android:icon="@drawable/weatherjnkv"
            />
    </group>


    <group
        android:id="@+id/grp_5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_logout_24"
            />
    </group>

</menu>
