<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_4sdp"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:contentPadding="10dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:src="@drawable/user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/name"
                    android:textColor="@color/u_primary_dark"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    app:layout_constraintStart_toEndOf="@id/iv_icon"
                    app:layout_constraintTop_toTopOf="@id/iv_icon" />

                <TextView
                    android:id="@+id/txt_role"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/farmars"
                    android:textColor="@color/u_primary_dark"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintStart_toEndOf="@id/iv_icon"
                    app:layout_constraintTop_toBottomOf="@id/txt_name" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/date"
                    android:textColor="@color/u_primary_dark"
                    android:textSize="@dimen/_6sdp"
                    app:layout_constraintStart_toEndOf="@id/iv_icon"
                    app:layout_constraintTop_toBottomOf="@id/txt_role" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="11:55 PM"
                    android:textColor="@color/u_primary_dark"
                    android:textSize="@dimen/_6sdp"
                    app:layout_constraintStart_toEndOf="@id/txt_date"
                    app:layout_constraintTop_toBottomOf="@id/txt_role" />

                <TextView
                    android:id="@+id/txt_query"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/nice3"
                    android:textColor="@color/u_primary_dark"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_date" />

                <ImageView
                    android:id="@+id/iv_query_pic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="@dimen/_200sdp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_query" />

                <ImageView
                    android:id="@+id/btn_profile"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/ract_green_user"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:src="@drawable/usersavatar"
                    app:layout_constraintBottom_toBottomOf="@id/btn_view"
                    app:layout_constraintEnd_toStartOf="@+id/btn_view"
                    app:layout_constraintTop_toTopOf="@id/btn_view" />

                <ImageView
                    android:id="@+id/btn_view"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ract_green_user"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:src="@drawable/eyewhite"
                    app:layout_constraintEnd_toStartOf="@+id/btn_edit"
                    app:layout_constraintTop_toBottomOf="@id/iv_query_pic" />

                <ImageView
                    android:id="@+id/btn_edit"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/ract_green_user"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/editiv"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_view"
                    app:layout_constraintEnd_toStartOf="@+id/btn_approve"
                    app:layout_constraintTop_toTopOf="@+id/btn_view" />

                <ImageView
                    android:id="@+id/btn_approve"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/ract_green_user"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/tickiv"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_view"
                    app:layout_constraintEnd_toStartOf="@+id/btn_delete"
                    app:layout_constraintTop_toTopOf="@+id/btn_view" />

                <ImageView
                    android:id="@+id/btn_delete"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/ract_green_user"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/deleteiv"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_view" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>