<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txt_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Content"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:fontFamily="@font/poppinsregular_400"
                android:textSize="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/lytgrey"/>
            <RelativeLayout
                android:id="@+id/lyoutContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp">

                <TextView
                    android:id="@+id/tvContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsregular_400"
                    android:justificationMode="inter_word"
                    android:text="Content Details..."
                    android:textColor="#BABCB9"
                    android:textFontWeight="300"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnViewImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/viewInYoutube"
                android:fontFamily="@font/aldrich"
                android:padding="@dimen/_10sdp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_5sdp"
                android:backgroundTint="@color/dark_green"

                />
            <!--            <ScrollView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent">-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="WebViewLayout">

                <LinearLayout
                    android:id="@+id/lay_media"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/lay_problemtoview"
                    android:orientation="vertical">


                    <com.google.android.exoplayer2.ui.PlayerView
                        android:id="@+id/pv_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <com.google.android.exoplayer2.ui.PlayerControlView
                        android:id="@+id/pv_main_audio"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_80sdp"
                        android:visibility="gone"
                        app:show_timeout="0"
                        tools:ignore="MissingClass" />

<!--                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView-->
<!--                        android:id="@+id/youtube_player_view"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:visibility="gone" />-->

                    <RelativeLayout
                        android:id="@+id/pdfViewPager2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_green"
                        android:visibility="gone" />

                    <WebView
                        android:id="@+id/webView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:visibility="gone"

                        />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_100sdp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/lay_problemtoview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    >

                    <TextView
                        android:id="@+id/text_video_not_open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_toStartOf="@id/vide_not_open_click"
                        android:gravity="center"
                        android:text="@string/video_not_open"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/vide_not_open_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="@dimen/_5sdp"
                        android:text="@string/click_here"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </RelativeLayout>
            </RelativeLayout>
            <!--            </ScrollView>-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>